# linguaweb-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: development_task.yaml
.github/workflows/: deploy.yaml  test.yaml
pre-commit/: check_env.sh
src/linguaweb_api/: __init__.py  main.py
src/linguaweb_api/core/: __init__.py  config.py  dictionary.py  middleware.py  models.py
src/linguaweb_api/data/: allowed_words.txt
src/linguaweb_api/microservices/: __init__.py  openai.py  openai_constants.py  s3.py  sql.py
src/linguaweb_api/routers/admin/: __init__.py  controller.py  schemas.py  views.py
src/linguaweb_api/routers/health/: __init__.py  controller.py  views.py
src/linguaweb_api/routers/speech/: __init__.py  controller.py  views.py
src/linguaweb_api/routers/text/: __init__.py  controller.py  models.py  schemas.py  views.py
src/linguaweb_api/routers/words/: __init__.py  controller.py  schemas.py  views.py
tests/: .env.test
tests/endpoint/: __init__.py  conftest.py  test_admin.py  test_health.py  test_speech.py  test_text.py  test_words.py
tests/unit/: test_core_models.py  test_dictionary.py  test_middleware.py  test_openai.py  test_s3.py  test_sql.py
